@@ -1,5 +1,12 @@
 2011-07-28  Torvald Riegel  <triegel@redhat.com>
 
+	* useraction.cc: Use vector instead of list to store actions.
+	Also support partial rollbacks for closed nesting.
+	* libitm_i.h (GTM::gtm_transaction::user_action): Same.
+	* beginend.cc: Same.
+
+2011-07-28  Torvald Riegel  <triegel@redhat.com>
+
 	* dispatch.h (GTM::abi_dispatch): Add can_run_uninstrumented_code and
 	closed_nesting flags, as well as a closed nesting alternative.
 	* method-serial.cc: Same.
